--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,54 @@
+body{
+	margin: 0;
+	position:absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	font-size: 100%;
+	line-height: 1.6875;
+}
+
+@media (max-width: 400px) {
+            h3 { font-size:50%;}
+     }
+
+@media (max-width: 800px) {
+            h3 { font-size:100%;}
+        }  
+     
+@media (max-width: 1100px) {
+            h3 { font-size:120%;}
+        }  
+
+@media (min-width: 1100px) {
+        	h3 { font-size:120%;}
+        	.wrap {max-width:770px;}
+        }
+
 /* Vertical Accordion Style */
 .va-container{
 	position:relative;
-	margin:40px auto 0 auto;
+	margin: none;
 }
 .va-wrapper{
 	width:100%;
 	height:100%;
 	position:relative;
 	overflow:hidden;
-	background:#000;
+	background:#f5f1ee;
+}
+
+.va-container2{
+	position:relative;
+	margin: none;
+}
+.va-wrapper2{
+	width:100%;
+	height:100%;
+	position:relative;
+	overflow:hidden;
+	background:#f5f1ee;
 }
 .va-slice{
 	cursor:pointer;
@@ -18,7 +58,7 @@
 	overflow:hidden;
 }
 .va-slice-1{
-	background:#f36831;
+	background:#f36333;
 }
 .va-slice-2{
 	background:#895691;
@@ -39,16 +79,16 @@
 	background:#000 url(../images/7.jpg) no-repeat center center;
 }
 .va-slice-color-1{
-	background-color:#97c5eb;
+	background-color:#f36831;
 }
 .va-slice-color-2{
-	background-color:#68ace5;
+	background-color:#895691;
 }
 .va-slice-color-3{
-	background-color:#0072cf;
+	background-color:#233c7e;
 }
 .va-slice-color-4{
-	background-color:#0039a6;
+	background-color:#31a8e0;
 }
 .va-slice-color-5{
 	background-color:#00338e;
@@ -62,11 +102,11 @@
 .va-title{
 	font-family: 'Open Sans Condensed', sans-serif;
 	text-transform:uppercase;
-	font-size:60px;
-	margin-left: auto;
-	margin-right: auto;
+	font-size:3em;
+	margin-top: 5%;
+	margin-left:30%;
+	margin-right:5%;
 	color:#fff;
-	text-shadow: 0px 0px 1px white;
 }
 .va-content{
 	display:none;
@@ -74,7 +114,7 @@
 	margin-right: auto;
 }
 .va-slice p{
-	font-size: 22px;
+	font-size: 2em;
 	font-style: italic;
 	font-family:Georgia, serif;
 }
@@ -89,7 +129,7 @@
 	color:#000;
 	background:#eede2f;
 	padding:3px 6px;
-	font-size:14px;
+	font-size:1em;
 	font-family:'PT Sans', sans-serif;
 	text-transform:uppercase;
 }
