--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body{
 	font-size: 2em;
 	font-style: italic;
 	font-family:Georgia, serif;
+	text-indent: 5%;
 }
 .va-slice ul{
 	margin-top:20px;
