--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,11 @@ body{
 	font-family: 'Open Sans Condensed', sans-serif;
 	text-transform:uppercase;
 	font-size:3em;
-	margin-top: 5%;
-	margin-left:30%;
-	margin-right:5%;
+	left:25%;
+	width:50%;
+	display: inline-block;
+	position: absolute;
+	text-align: center;
 	color:#fff;
 }
 .va-content{
