--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,18 @@ body{
         	.wrap {max-width:770px;}
         }
 
+@font-face {
+    font-family: 'bebasregular';
+    src: url('fonts/BEBAS___-webfont.eot');
+    src: url('fonts/BEBAS___-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/BEBAS___-webfont.woff') format('woff'),
+         url('fonts/BEBAS___-webfont.ttf') format('truetype'),
+         url('fonts/BEBAS___-webfont.svg#bebasregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /* Vertical Accordion Style */
 .va-container{
 	position:relative;
@@ -100,7 +112,7 @@ body{
 	background-color:#002144;
 }
 .va-title{
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'bebasregular';
 	text-transform:uppercase;
 	font-size:3em;
 	left:25%;
