--- a/css/style.css
+++ b/css/style.css
@@ -151,12 +151,12 @@ body{
 }
 
 .va-slice ul{
-	 display: inline-block;
+	 /*display: inline-block;*/
      margin: 0;
      padding: 0;
         /* For IE, the outcast */
     zoom:1;
-    *display: inline;
+    /**display: inline;*/
 }
 .va-slice ul li{
 	float: left;
