--- a/ProjBanBaKhamin/css/own_style.css
+++ b/ProjBanBaKhamin/css/own_style.css
@@ -19,7 +19,7 @@
 	}
 
 		
-		.info {
+	.info {
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
@@ -31,6 +31,7 @@
     margin: 0 0 5px;
     color: #777;
 }
-		.leaflet-container {
+	.leaflet-container {
     background: #FFF;
+}
 </style>
